tests/vendor/valid/trivial/null_then_return.c
//expect 9
//tags: trivial
int main() {
    ;
    return 9;
}