tests/vendor/invalid/syntax/extra_paren.c
//tags: trivial
int main()
{
    return (3));
}